# OOP_PROJECTS

ANTRENAMENT_TEST_2/: CMakeLists.txt  main.cpp
ANTRENAMENT_TEST_2/Domain/: Car.cpp  Car.h
ANTRENAMENT_TEST_2/Repo/: Repository.cpp  Repository.h
ANTRENAMENT_TEST_2/Service/: Service.cpp  Service.h
ANTRENAMENT_TEST_2/UI/: Ui.cpp  Ui.h
ANTRENAMENT_TEST_3/: CMakeLists.txt  info.txt  main.cpp
ANTRENAMENT_TEST_3/Domain/: Domain.cpp  Domain.h
ANTRENAMENT_TEST_3/Repository/: Repo.cpp  Repo.h
ANTRENAMENT_TEST_3/Service/: Service.cpp  Service.h
ANTRENAMENT_TEST_3/UI/: Ui.cpp  Ui.h
MovieAdmin/: CMakeLists.txt  main.cpp
MovieAdmin/Domain/: domain.cpp  domain.h  movie.cpp  movie.h
MovieAdmin/Repository/: repo.cpp  repo.h
MovieAdmin/Service/: service.cpp  service.h
MovieAdmin/Tests/: Tests.cpp  Tests.h
MovieAdmin/UI/: ui.cpp  ui.h
